# badminton-be-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: audit.yml  deploy.yml
docs/: MIGRATION-0003-groups.md
grafana/: rallyup-dashboard.json
migrations/: 0001_init.sql  0002_reservation_credentials.sql  0003_groups.sql
nginx/: nginx.conf
src/: auth.rs  config.rs  downstream.rs  email.rs  error.rs  jobs.rs  lib.rs  main.rs  metrics.rs  models.rs  net.rs  notify.rs  ocr.rs  otp.rs  push.rs  security.rs  state.rs  time.rs  upload.rs
src/routes/: admin.rs  auth.rs  config.rs  credentials.rs  groups.rs  health.rs  kcal.rs  mod.rs  polls.rs  push.rs  reservations.rs  stream.rs
