[package]
name = "rallyup-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rallyup-api"
path = "src/main.rs"

[[bin]]
name = "reset-admin-otp"
path = "src/bin/reset_admin_otp.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
thiserror = "2"
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "json"] }
url = "2"
rand = "0.8"
jsonwebtoken = "9"
web-push = { version = "0.10", default-features = false, features = ["hyper-client"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
base64 = "0.22"
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
